# KinectHolo

./: .gitignore  README.md
HoloKinect/HoloKinect/: AppDelegate.h  AppDelegate.m  Info.plist  VideoPlayerViewController.h  VideoPlayerViewController.m  VideoTableViewController.h  VideoTableViewController.m  main.m
HoloKinect/HoloKinect.xcodeproj/: project.pbxproj
HoloKinect/HoloKinect.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
HoloKinect/HoloKinect.xcodeproj/project.xcworkspace/xcuserdata/Krishna.xcuserdatad/: UserInterfaceState.xcuserstate
capture/: CMakeLists.txt
capture/src/: HoloApp.cpp  HoloApp.h  Kinect.cpp  Kinect.h  main.cpp
client/HoloKinect/: Podfile
client/HoloKinect/HoloKinect/: 2017-07-30-01-46-44-050.hologram  2017-07-30-01-51-07-504.hologram  ARKitViewController.h  ARKitViewController.m  ASScreenRecorder.h  Info.plist  Message.pbobjc.h  Message.pbobjc.m  TableViewCell.h  TableViewCell.m  VideoPlayerViewController.m  VideoTableViewController.m  avi.hologram  frame.hologram  hologram2.hologram  hologram3.hologram  hologram3.txt  krishna.hologram  natasha.hologram
client/HoloKinect/HoloKinect.xcodeproj/: project.pbxproj
client/HoloKinect/HoloKinect.xcworkspace/: contents.xcworkspacedata
client/HoloKinect/HoloKinect.xcworkspace/xcuserdata/Krishna.xcuserdatad/: UserInterfaceState.xcuserstate
client/HoloKinect/HoloKinect/Assets.xcassets/Avi.imageset/: Contents.json
client/HoloKinect/HoloKinect/Assets.xcassets/Brijen.imageset/: Contents.json
client/HoloKinect/HoloKinect/Assets.xcassets/LaunchImage.launchimage/: Contents.json
common/: message.proto
face_detect/: face_detector.py  facedetect.cpp
halogen/: .gitignore  CMakeLists.txt  build.sh  run.sh
halogen/src/: Halogen.cpp  Halogen.h  Kinect.cpp  Kinect.h  main.cpp
halogen/src/proto/: message.pb.cc  message.pb.h
proto_objc_bindings/: Message.pb.h  Message.pb.m  Message.pbobjc.h  Message.pbobjc.m
server/: .gitignore  README.md  app.js  index.js  storage.proto
server/files/: 2017-07-30-03-32-36-643.hologram  dictionary.json
server/public/: message.proto
(+8 files in other folders)
